2012-02-19 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallFixInterpreterPerl): Use
	unified diff.
	(CygbuildIndentFilter): New.

	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckReadme): Adjust
	return status codes. Turn WARN into ERROR messages.

2012-02-18 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckBinFiles): Set
	variable str to empty before checking is binary exists.
	(CygbuildPerlLibraryDependsGuess): Improve Std Module::Name
	check.
	(CygbuildPerlLibraryDependsCache): Better Std module detection.

	* bin/cygbuild.sh (CygbuildCmdInstallMain): Fix call to
	CygbuildCmdDeleteListExists().
	(CygbuildCmdInstallAfterListExists): New.
	(CygbuildCmdInstallAfterList): New.
	(CygbuildCmdInstallMain): Call CygbuildCmdInstallAfterList.
	(CygbuildCmdDeleteAfterListExists): New.
	(CygbuildCmdInstallMain): Move CygbuildCmdDeleteListExists call.
	(CygbuildWhich): Define PATH
	(CygbuildObjDumpLibraryDepList): Ignore Windows 7 core dll files.
	(CygbuildCygcheckLibraryDepListFull): Ignore Windows 7 core dll files.

2012-02-11 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (Help::OPTIONAL EXTERNAL FILES): Document
	delete.lst file. Move --help option to the end. Document --xz
	option.

	* bin/cygbuild.sh (CygbuildCmdDeleteListExists): New.
	(CygbuildCmdInstallList): Correct variable name to "retval".
	(CygbuildCmdDeleteList): New.
	(CygbuildDefineGlobalMain): New variable set SCRIPT_DELETE_LST_CYGFILE.

2012-02-04 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/clean.sh.ex: New.

	* bin/cygbuild.sh (CygbuildDefineGlobalMain): Add SCRIPT_CLEAN_CYGFILE,
	SCRIPT_DISTCLEAN_CYGFILE.
	(CygbuildCmdCleanMain): Add support for custom clean.sh, distclean.sh

2012-02-01 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildTarOptionCompress): Add XZ support. Correct
	LZMA support.
	(CygbuildCommandMain): Add option --xz.
	(CygbuildCompress): Add XZ support.